--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
 }
 
 .table-custom {
-    color: white !important;
+    color: blue !important;
     border-collapse: separate !important;
     border-spacing: 0 10px !important;
 }
@@ -371,3 +371,4 @@ body {
 
 .sidebar::-webkit-scrollbar { width: 4px; }
 .sidebar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
+
